added endcraft site and content pog

--- a/templete/index.html
+++ b/templete/index.html
@@ -24,7 +24,7 @@
             <nav class="navbar">
                 <div class="navbar-content">
                     <button class="btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
-                        <i class="fa fa-bars rud-nav-item-color" aria-hidden="true">
+                        <i class="fa fa-bars text-white" aria-hidden="true">
                         </i>
                     </button>
                 </div>
