--- a/freebirdsmp/index.html
+++ b/freebirdsmp/index.html
@@ -90,7 +90,10 @@
                         <div class="row">
                             <div class="col">
                                 <div class="card bg-white text-white text-center">
-                                    <a href="../" class="btn btn-primary">Home</a>
+                                    <a href="../" class="btn btn-primary">Back</a>
+                                </div>
+                                <div class="card bg-white text-white text-center">
+                                    <a href="../bugs/" class="btn btn-primary">Report A Bug</a>
                                 </div>
                             </div>
                         </div>
