i should not be doing this at 2:17 am

--- a/endcraft/index.html
+++ b/endcraft/index.html
@@ -58,7 +58,7 @@
                     </h1>
                     <div class="sidebar-divider"></div>
                     <a href="./" class="sidebar-link">Home</a>
-                    <a href="./archvie/" class="sidebar-link">PMMP Archive</a>
+                    <a href="./archive/" class="sidebar-link">PMMP Archive</a>
                     <a href="../osea/" class="sidebar-link">Files</a>
                     <div class="rud-spacer-sm"></div>
                     <h1 class="sidebar-title">
