--- a/freebirdsmp/index.html
+++ b/freebirdsmp/index.html
@@ -90,10 +90,21 @@
                         <div class="row">
                             <div class="col">
                                 <div class="card bg-white text-white text-center">
-                                    <a href="../" class="btn btn-primary">Back</a>
-                                </div>
-                                <div class="card bg-white text-white text-center">
-                                    <a href="../bugs/" class="btn btn-primary">Report A Bug</a>
+                                    <div>
+                                        <a href="../" class="btn btn-primary">Back</a>
+                                    </div>
+                                    <div class="sespacer">
+
+                                    </div>
+                                    <div class="sespacer">
+                                        
+                                    </div>
+                                    <div class="sespacer">
+                                        
+                                    </div>
+                                    <div>
+                                        <a href="../bugs/" class="btn btn-primary">Report A Bug</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -181,7 +192,7 @@
                 delete dataObj.undefined;
             }
 
-            function handleData() {
+            function handleData(dataToHandle) {
                 //handle data here
             }
         </script>
